--- a/examples/animation.xhtml
+++ b/examples/animation.xhtml
@@ -6,12 +6,12 @@
       xmlns:x3d="http://www.web3d.org/specifications/x3d-namespace">
    <head>
       <title>DOM Modifications: Animations</title>
-      
+
       <link rel="stylesheet" type="text/css" media="all" href="style/default.css"/>
 
       <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
       <script type="text/javascript" src="page.js"></script>
-    
+
       <script src="external/xml3d.js"  type="text/javascript"/>
       <script src="../build/output/xml3d-motion.js" type="text/javascript"/>
    </head>
@@ -95,7 +95,7 @@
       <div id="footer"/>
 
 <script type="text/javascript">
-  var movObjects = {}, factory = XMOT.ClientMotionFactory;
+  var movObjects = {}, factory = XMOT.MotionFactory;
   var constraint = new XMOT.SimpleConstraint(true, true, true);
   var id = 0;
 
@@ -140,7 +140,7 @@
       }
       id = aobj.startAnimation("a3", {loop:2});
   };
-  
+
   function threeTypes(){
   	  var aobj = movObjects.cube;
       if(!aobj) {
@@ -148,19 +148,19 @@
       }
       id = aobj.startAnimation("a4", {loop:2});
   };
-  
+
   function endless(){
   	var aobj = movObjects.cube;
       if(!aobj) {
           aobj = movObjects.cube = createAnimatable();
       }
       id = aobj.startAnimation("a4", {loop: 2E+12345});
-      //loop is larger than max float and therefore maps to "infinity", which really means infinte number of iterations 
+      //loop is larger than max float and therefore maps to "infinity", which really means infinte number of iterations
   };
 
   function stopAnimations() {
       var aobj;
-      if(!(aobj = movObjects.cube)) 
+      if(!(aobj = movObjects.cube))
           return;
       aobj.stopAnimation(id);
   };
@@ -184,7 +184,7 @@
   };
 </script>
       <br/>
-   </div> 
+   </div>
    </div>
    </body>
 </html>
