--- a/examples/transformtracker.xhtml
+++ b/examples/transformtracker.xhtml
@@ -81,13 +81,13 @@
   </form>
 
   <div class="message">
-    <p>Through the XMOT.TransformTracker transformation changes of given nodes
+    <p>Through the XML3D.tools.TransformTracker transformation changes of given nodes
     can be tracked. That is it notifies it's listener as soon as the global matrix
     of the node changed.
     </p>
 
     <p>
-      In this example the XMOT.TransformTracker is invoked on the grey rectangle. By hitting
+      In this example the XML3D.tools.TransformTracker is invoked on the grey rectangle. By hitting
       the buttons above you can change two parameters:
       <ul>
           <li>the transform attribute of the target node</li>
