--- a/examples/animation.xhtml
+++ b/examples/animation.xhtml
@@ -13,7 +13,7 @@
       <script type="text/javascript" src="page.js"></script>
 
       <script src="external/xml3d.js"  type="text/javascript"/>
-      <script src="../build/output/xml3d-toolkit.js" type="text/javascript"/>
+      <script src="../build/output/xml3d.tools.js" type="text/javascript"/>
    </head>
    <body>
    <div id="overall">
