--- a/examples/transformtracker.xhtml
+++ b/examples/transformtracker.xhtml
@@ -10,7 +10,7 @@
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script type="text/javascript" src="external/xml3d.js"></script>
-    <script type="text/javascript" src="../build/output/xml3d-toolkit.js"></script>
+    <script type="text/javascript" src="../build/output/xml3d.tools.js"></script>
     <script type="text/javascript" src="page.js" />
 
     <script src="transformtracker.js" />
