--- a/examples/cameracontrollers.xhtml
+++ b/examples/cameracontrollers.xhtml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd" >
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:webgl="http://www.xml3d.org/2009/xml3d/webgl" xmlns:x3d="http://www.web3d.org/specifications/x3d-namespace">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:webgl="http://www.xml3d.org/2009/xml3d/webgl">
 <head>
     <title>Camera Controllers</title>
 
     <link rel="stylesheet" type="text/css" media="all" href="style/default.css"/>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script type="text/javascript" src="page.js"></script>
 
     <script type="text/javascript" src="external/xml3d.js"></script>
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="cameracontrollers.js"/>
 </head>
 <body>
-    <div id="overall">
+<div id="overall">
     <div id="content">
     <h1>Camera Controllers</h1>
     <xml3d id="scene" xmlns="http://www.xml3d.org/2009/xml3d"
