--- a/examples/interaction/tests/test_gizmos.xhtml
+++ b/examples/interaction/tests/test_gizmos.xhtml
@@ -32,16 +32,19 @@
             <float3 name="diffuseColor">0.8 0.8 0.8</float3>
             <float name="ambientIntensity">1</float>
           </shader>
-          <transform id="t_mainTargetParent" translation="0 0 -10" />
-          <transform id="t_mainTarget" scale="3 2 2" translation="2 0 0" />
+          <transform id="t_mainTargetParentParent" rotation="1 0 1 -0.4" />
+          <transform id="t_mainTargetParent" translation="0 0 -10" rotation="0 1 0 -0.5" />
+          <transform id="t_mainTarget" scale="3 2 2" translation="2 0 0" rotation="1 1 0 0.5" />
           <transform id="t_camera"
                      rotation="-0.09110504 0.994380414 0.053919807 1.073698264"
                      translation="26.7296199798584 4.267266750335693 5.452800273895264"/>
         </defs>
-        <group transform="#t_mainTargetParent">
-          <group id="g_mainTarget" shader="#s_rectangle" transform="#t_mainTarget">
-            <mesh type="triangles" src="#d_rectangle" />
-          </group>
+        <group transform="#t_mainTargetParentParent">
+            <group transform="#t_mainTargetParent">
+              <group id="g_mainTarget" shader="#s_rectangle" transform="#t_mainTarget">
+                <mesh type="triangles" src="#d_rectangle" />
+              </group>
+            </group>
         </group>
 
         <group id="g_camera" transform="#t_camera">
