cameracontrollers-html: fixed a small bug

--- a/examples/cameracontrollers.xhtml
+++ b/examples/cameracontrollers.xhtml
@@ -56,7 +56,7 @@
         <div class="actions">
             <b>Camera Type:</b>
             <span>
-                <input type="radio" name="camtype" value="examine" checked="true" />
+                <input type="radio" name="camtype" value="examine" checked="checked" />
                 Examine
             </span>
             <span>
