translatable: added a separator line

--- a/examples/interaction/tests/test_translatable.xhtml
+++ b/examples/interaction/tests/test_translatable.xhtml
@@ -94,6 +94,8 @@
             for the other sensor.
         </div>
 
+        <div class="separator" />
+
         <div class="paragraph">
             Below the drag status is depicted. The number of dots are increased, whenever
             there is a drag event arriving.
