examples-gamepad: added enabling of gamepad event polling

--- a/examples/gamepad.xhtml
+++ b/examples/gamepad.xhtml
@@ -19,7 +19,11 @@
     <div id="content">
         <h1>Gamepad</h1>
 
-        <div class="description">Tests the gamepad availability, in case one or two are connected.</div>
+        <div class="description">
+            Tests the gamepad availability, in case one or two are connected. To enable it
+            call <span class="code">XML3D.tools.GamepadEventProvider.enable()</span> and then
+            register to the corresponding events.
+        </div>
 
         <div class="separator" />
 
