rotatable: renamed a button

--- a/examples/interaction/tests/test_rotatable.xhtml
+++ b/examples/interaction/tests/test_rotatable.xhtml
@@ -42,7 +42,7 @@
     </xml3d>
 
     <div class="actions">
-        <input type="button" class="test-button" value="Activate Trackball" id="toggletrackball" onclick="toggleTrackBall();"/>
+        <input type="button" class="test-button" value="Activate Rotatable" id="toggleactivation" onclick="toggleActivation();"/>
         <input type="button" class="test-button" value="Reset Rotation" onclick="resetRotation();"/>
 
         <div class="inline-action">
