--- a/examples/cameracontrollers.xhtml
+++ b/examples/cameracontrollers.xhtml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd" >
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:webgl="http://www.xml3d.org/2009/xml3d/webgl">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Camera Controllers</title>
 
