--- a/examples/gamepad.xhtml
+++ b/examples/gamepad.xhtml
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" type="text/css" media="all" href="style/default.css"/>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script type="text/javascript" src="page.js"></script>
 
     <script src="external/xml3d.js" type="text/javascript"/>
