--- a/examples/interaction/index.xhtml
+++ b/examples/interaction/index.xhtml
@@ -4,7 +4,7 @@
   <head>
     <link rel="stylesheet" type="text/css" media="all" href="../style/default.css"/>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script type="text/javascript" src="page.js"></script>
     <script type="text/javascript" >
         var PAGE_INDEX = true;
