--- a/examples/interaction/tests/test_gizmos.xhtml
+++ b/examples/interaction/tests/test_gizmos.xhtml
@@ -5,7 +5,7 @@
     <title>Gizmos</title>
     <link rel="stylesheet" type="text/css" media="all" href="../../style/default.css"/>
 
-    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script type="text/javascript" src="../../external/xml3d.js"></script>
     <script type="text/javascript" src="../../external/eyelightShader.js"></script>
     <script type="text/javascript" src="../../../build/output/xml3d.tools.js"></script>
