--- a/examples/viewtracker.xhtml
+++ b/examples/viewtracker.xhtml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd" >
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:webgl="http://www.xml3d.org/2009/xml3d/webgl">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>ViewTracker</title>
     <link rel="stylesheet" type="text/css" media="all" href="style/default.css"/>
 
-    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script type="text/javascript" src="external/xml3d.js"></script>
     <script type="text/javascript" src="../build/output/xml3d.tools.js"></script>
     <script type="text/javascript" src="page.js"/>
